# spatial-ai-code

./: .gitignore  analyze.py  eval.py  finetune.py  inference.py  main.py  models.py  orchestrate.sh  pyproject.toml  rag.py  reason_train.json  reason_train_converted.json  run_batch.sh  run_batch_a100_long.sh  run_batch_a100_long_two.sh  run_batch_h100.sh  spatial_knowledge.docx  spatial_sft_data_all_test.jsonl  spatial_sft_data_uncertainty.jsonl  spatial_sft_data_uncertainty_test.jsonl  spatial_sft_data_uncertainty_train.jsonl  spatialeval_cleaned.jsonl
eval/: clean_v3.py  clean_v5.py  create_visual.py  eval.py  eval_two_stage.py  models.py  pyproject.toml  rag.py  spatialeval_org.jsonl  telemetry-id  utils.py
eval/config/: Deepseek-R1-Qwen_8B_Baseline.yaml  Deepseek-R1-Qwen_8B_Finetuned.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_fewshot.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_nonshot.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_nonshot_1.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_nonshot_1_mul.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_nonshot_2.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_nonshot_3.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_nonshot_4.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_oneshot_3.yaml  Deepseek-R1-Qwen_8B_NonFinetuned_threeshot_3.yaml  Gemma_12B_two_pass.yaml  Qwen_14B_two_pass.yaml  Qwen_7B_Finetuned_two_pass.yaml  Qwen_7B_two_pass.yaml  basic_eval_qwen2.5-0.5b.yaml  eval_deepseek-r1-distill-qwen-1.5b.yaml  eval_deepseek-r1-distill-qwen-1.5b_two_pass.yaml  eval_qwen3-7b-spatial-reasoning.yaml
eval/config/tasks/: clean_all.py  (+15 more)
inference/: inference.py  pyproject.toml
(+51 files in other folders)
