[project]
name = "spatial-ai-inference"
version = "0.1.0"
description = "Model inference with vLLM and transformers"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "peft>=0.10.0",
    "sentence-transformers>=2.2.0",
    "llama-index>=0.12.42",
    "llama-index-embeddings-huggingface>=0.5.5",
    "accelerate>=0.30.0",
]
